added/updated meta description & content description

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>GroupDocs.Total</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta name="description" content="View DOCX, Convert PDF to DOCX, eSign PDF, Merge PDF everything becomes easy with help of GroupDocs.Total">
+		<title>GroupDocs.Total - Document Viewer, Electronic Signature, Document Converter and much more</title>
 		<link href="favicon.ico?v1.0" rel="shortcut icon" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-		<link type="text/css" rel="stylesheet" href="resources/css/groupdocs.total.css"/>
-		<link type="text/css" rel="stylesheet" href="resources/css/groupdocs.total.mobile.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/groupdocs.total.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/groupdocs.total.mobile.css"/>
 	</head>
 	<body>
 		<div id="logo">
@@ -16,11 +17,22 @@
 		<ul id="navigation">
 			<li><a href="https://github.com/groupdocs-total">Examples</a></li>
 			<li><a href="https://products.groupdocs.com/total">Products</a></li>
+			<li><a href="https://docs.groupdocs.com/display/gdtotalproductfamily/Home">Documentation</a></li>
 		</ul>
 		<div id="container">
 			<h3>GroupDocs</h3>
 			<h1>Total</h1>
 			<h4>Product Family</h4>
+			<div id="product-description">
+				<strong><a href="https://products.groupdocs.com/total">GroupDocs.Total</a></strong> is a set of Document Manipulation API's 
+				for <a class="dot-net" href="https://products.groupdocs.com/total/net">.NET</a> and 
+				<a class="java" href="https://products.groupdocs.com/total/java">Java</a> that provides innumerous and unique features, 
+				such as view documents, esign documents, convert documents (PDF to Word, DOCX to PDF, PDf to PNG and 7000+ more conversion pairs), 
+				extract metadata from documents, annotate documents, compare documents, parse documents, full-text search documents, edit documents, 
+				merge documents and much more!
+				Over 100 different document formats are supported.
+				<div><a href="https://products.groupdocs.app">Live Showcase Demo</a></div>
+			</div>
 		</div>
 		<ul id="social">
 			<li><a href="https://www.youtube.com/channel/UCUbnqP6PGNHBsL5uzTef79g"><i class="fab fa-youtube"></i></a></li>
